# mcsema

./: .appveyor.yml  .clang-format  .dockerignore  .gdbinit  .gitignore  .remill_commit_id  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.txt  CMakeLists.txt  CMakeLists_vcpkg.txt  CONTRIBUTING.md  CONTRIBUTORS  Changelist-64bit.txt  Dockerfile  LICENSE  LICENSE.txt  README.md  bootstrap.bat  bootstrap.osx.sh  bootstrap.sh  bootstrap_linux.sh  package.sh  travis.sh
OS/: ABI.cc
boost/: CMakeLists.txt  CTestConfig.cmake
boost/boost/: integer_traits.hpp
boost/boost/config/: auto_link.hpp
boost/boost/date_time/: c_local_time_adjustor.hpp  c_time.hpp  date_clock_device.hpp  date_parsing.hpp  format_date_parser.hpp  string_convert.hpp  strings_from_facet.hpp  time_facet.hpp  tz_db_base.hpp
boost/boost/mpl/: always.hpp  and.hpp  assert.hpp  bitand.hpp  bitor.hpp  bool.hpp  eval_if.hpp  for_each.hpp  has_xxx.hpp  or.hpp  print.hpp
boost/boost/random/: binomial_distribution.hpp  discard_block.hpp  discrete_distribution.hpp  generate_canonical.hpp  geometric_distribution.hpp  lagged_fibonacci.hpp  mersenne_twister.hpp  normal_distribution.hpp  random_device.hpp  ranlux.hpp  shuffle_order.hpp  shuffle_output.hpp  subtract_with_carry.hpp  uniform_01.hpp  uniform_on_sphere.hpp  uniform_real.hpp  uniform_real_distribution.hpp  xor_combine.hpp
boost/libs/: CMakeLists.txt
boost/libs/accumulators/: CMakeLists.txt  module.cmake
boost/libs/algorithm/: CMakeLists.txt  module.cmake
boost/libs/any/: CMakeLists.txt  any_test.cpp  module.cmake
boost/libs/array/: CMakeLists.txt  module.cmake
boost/libs/asio/: CMakeLists.txt  module.cmake
boost/libs/assign/: CMakeLists.txt  module.cmake
boost/libs/bimap/: CMakeLists.txt  module.cmake
boost/libs/bind/: CMakeLists.txt  module.cmake
boost/libs/chrono/: CMakeLists.txt  module.cmake
boost/libs/circular_buffer/: CMakeLists.txt  index.html  module.cmake
boost/libs/compatibility/: CMakeLists.txt  module.cmake
boost/libs/concept_check/: CMakeLists.txt  module.cmake
boost/libs/config/: CMakeLists.txt
boost/libs/container/: CMakeLists.txt  module.cmake
boost/libs/context/: CMakeLists.txt  module.cmake
boost/libs/conversion/: CMakeLists.txt  cast.htm  index.html  lexical_cast_test.cpp  numeric_cast_test.cpp
boost/libs/crc/: CMakeLists.txt  module.cmake
boost/libs/date_time/: CMakeLists.txt  module.cmake
boost/tools/: CMakeLists.txt
cmake/protobuf/: CMakeLists.txt  ProtobufDownloader.cmake  README  protobuf-common.cmake
mc-sema/: CMakeLists.txt  Lift.cpp
mc-sema/Arch/: Arch.cpp  Arch.h  Dispatch.h  Register.h
mc-sema/BC/: Util.cpp  Util.h
mc-sema/CFG/: CFG.cpp  CFG.h
mc-sema/bin_descend/: CFG.proto  CFG_pb2.py  CMakeLists.txt  ExternalFuncMap.cpp  ExternalFuncMap.h  bin_descend.cpp  bin_descend_wrapper.py  cfg_recover.cpp  cfg_recover.h  fake_imports.py  func_map  get_cfg.py  imports_for_dll.py
mc-sema/binary_common/: CFG.pb.cc  CFG.pb.h  CFG.proto  CMakeLists.txt  COFFTarget.cpp  COFFTarget.h  ELFTarget.cpp  ELFTarget.h  LLVMObjectTarget.cpp  LLVMObjectTarget.h  PETarget.cpp  PETarget.h  bincomm.cpp  bincomm.h
mc-sema/bitcode_from_cfg/: CMakeLists.txt  cfg_to_bc.cpp
mc-sema/cfgToLLVM/: Annotation.cpp  Annotation.h  ArchOps.cpp  ArchOps.h  CMakeLists.txt  Externals.h  InstructionDispatch.cpp  InstructionDispatch.h  JumpTables.cpp  JumpTables.h  RegisterUsage.cpp  RegisterUsage.h  TransExcn.cpp  TransExcn.h  inlineSpecials.cpp  linuxArchOps.cpp  linuxArchOps.h  osxArchOps.cpp  osxArchOps.h  postPassFuncs.h  postPasses.cpp  postPasses.h  raiseX86.cpp  raiseX86.h  raiseX86_64.cpp  toLLVM.cpp  toLLVM.h  toModule.h  win32ArchOps.cpp  win32ArchOps.h  win32_Intrinsics.cpp  win32_Intrinsics.h  win32cb.cpp  win32cb.h  win64ArchOps.cpp  win64ArchOps.h  x86Helpers.cpp  x86Helpers.h  x86Instrs.cpp  x86Instrs.h  (+34 more)
mc-sema/cfg_examples/: bigger.c  cfg_1.cfg  cfg_1.py  cfg_2.cfg  cfg_2.py  cfg_3.cfg  cfg_3.py  insertionsort.c
mc-sema/collect_variable_type/: Makefile  basic_global.c  basic_global_array.c  collect_types.py
mc-sema/common/: BaseBMO.h  Defaults.h  LExcn.h  RegisterState.h
mc-sema/peToCFG/: CFG.proto  CMakeLists.txt  inst_decoder_fe.cpp  inst_decoder_fe.h  peToCFG.cpp  peToCFG.h  readAsmTxt.cpp  readAsmTxt.h
mc-sema/protobuf-cmake/: CMakeLists.txt  README
mc-sema/runtime/: CMakeLists.txt  driver.c  linux_amd64_callback.bc  linux_amd64_callback.c  linux_amd64_callback.cpp  linux_i386_callback.bc  linux_i386_callback.c  print_ELF_32_linux.cpp  print_ELF_64_linux.cpp  print_PE_32_windows.cpp  print_PE_64_windows.cpp  runtime.asm
mc-sema/std_defs/: apr_defs.txt  linux.txt  pcre_defs.txt  std_defs.txt  windows.txt
mc-sema/test_x86_64/: BIN_DESCEND_PATH.linux  demo1.sh  demo11.sh  demo14.sh  demo16.sh  demo4.sh  demo5.sh  demo6.sh  demo7.sh  demo8.sh  demo9.sh  demo_driver1.c  demo_driver13.c  demo_driver2.c  demo_driver5.c  demo_driver_fpu1.c  demo_sailboat.sh  demo_test13.c  demo_test14.c  demo_test15.cfg  demo_test16.c  demo_test3.c  demo_test4.c  demo_test9.c
mc-sema/tests/: BIN_DESCEND_PATH  CFG_TO_BC_PATH  CFG_TO_BC_PATH.linux  CFG_TO_BC_PATH.win32  IDA_PATH  IDA_PATH.linux  IDA_PATH.win32  LLVM_PATH.linux  LLVM_PATH.win32  NASM_PATH  RUNTIME_PATH.linux  STD_DEFS.linux  aullshr.c  clearall.bat  clearall.sh  demo1.bat  demo1.sh  demo10.bat  demo10.sh  demo11.bat  demo11.sh  demo11_map.txt  demo12.bat  demo12.sh  demo13.bat  demo13.sh  demo14.bat  demo14.sh  demo15.bat  demo15.sh  demo16.bat  demo16.sh  demo16_defs.txt  demo17.sh  demo2.bat  demo2.sh  demo3.bat  demo3.sh  demo4.bat  demo4.sh  (+74 more)
mc-sema/validator/: CMakeLists.txt
mcsema/Version/: CMakeLists.txt  Version.cpp.in  Version.h
tests/test_suite_generator/: .clang-format  .gitignore  CMakeLists.txt
tests/var_recovery/: .gitignore  CMakeLists.txt  README.md  basic_fn_ptr.c  basic_global_arrays.c  basic_global_struct.c  basic_global_test2.c  basic_local_ref.c  basic_struct.c  compare_globals.py  lift.sh  print_variable.py  recover_and_test.sh  stack_locals_00.c  stack_locals_01.c  stack_locals_10.c  stack_locals_20.c  stack_locals_30.c
(+6154 files in other folders)
